--- a/index.html
+++ b/index.html
@@ -11,7 +11,37 @@
 </head>
 <body>
     <div class="container">
-    <h1> Hello Laura! </h1>
+    <h1> New York </h1>
+    <ul>
+        <li>
+            Friday 05:00
+        </li>
+        <li>
+            Clear
+        </li>
+    </ul>
+    <div class="row">
+        <div class="col-md-6">
+            <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="clear"/>
+            12°C | °F
+        </div>
+    </div>
+        <div class="col-md-6">
+        <ul>
+         <li>
+             Precipitation: 0%
+         </li>
+         <li>
+            Humidity: 0%
+        </li>
+        <li>
+            Wind: 2km/h
+        </li>
+        </ul>
+            
+        </div>
+
+
     </div>
 
     <script src="src/app.js"> </script>
