--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div class="container">
+    <div class="weather-app">
     <h1> New York </h1>
     <ul>
         <li>
@@ -21,12 +22,12 @@
         </li>
     </ul>
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-6">
             <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="clear"/>
             12°C | °F
-        </div>
-    </div>
-        <div class="col-md-6">
+        </div> 
+
+        <div class="col-6">
         <ul>
          <li>
              Precipitation: 0%
@@ -37,11 +38,13 @@
         <li>
             Wind: 2km/h
         </li>
-        </ul>
-            
+        </ul>            
         </div>
-
-
+    </div>
+    </div>
+    <small>
+       <a href="https://github.com/LauCarrillo21/vanilla-weather-app" target="_blank">Open-source code</a> by Laura Carrillo
+    </small>
     </div>
 
     <script src="src/app.js"> </script>
