--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="container">
+    <div class="weather-app-wrapper">
     <div class="weather-app">
+    <div class="overview">
     <h1> New York </h1>
     <ul>
         <li>
@@ -20,10 +22,14 @@
             Clear
         </li>
     </ul>
+    </div>
+
     <div class="row">
-        <div class="col-6">
-            <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="clear"/>
-            12°C | °F
+        <div class="col-6">   
+         <div class="weather-tempertaure">     
+             <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="clear"/>
+            12 °C | °F   
+         </div>      
         </div> 
 
         <div class="col-6">
@@ -40,11 +46,12 @@
         </ul>            
         </div>
     </div>
+    </div>
+
     <small>
         <a href="https://github.com/LauCarrillo21/vanilla-weather-app" target="_blank">Open-source code</a> by Laura Carrillo
      </small>
     </div>
-    
     </div>
 
     <script src="src/app.js"> </script>
