--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
 
     <div class="row">
         <div class="col-6">   
-         <div class="weather-tempertaure">     
+         <div class="weather-temperature">     
              <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="clear"/>
-            12 °C | °F   
+            <strong>12</strong>
+            <span class="units">
+             °C | <a href="#"> °F </a>
+            </span>  
          </div>      
         </div> 
 
