--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css">
     <title> Weather App </title>
 </head>
@@ -13,13 +14,12 @@
     <div class="weather-app-wrapper">
     <div class="weather-app">
     <div class="overview">
-    <h1> New York </h1>
+    <h1 id="city"> </h1>
     <ul>
         <li>
             Friday 05:00
         </li>
-        <li>
-            Clear
+        <li id="description">
         </li>
     </ul>
     </div>
@@ -28,7 +28,7 @@
         <div class="col-6">   
          <div class="weather-temperature">     
              <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="clear"/>
-            <strong>12</strong>
+            <strong id="temperature"> </strong>
             <span class="units">
              °C | <a href="#"> °F </a>
             </span>  
@@ -37,14 +37,12 @@
 
         <div class="col-6">
         <ul>
+         
          <li>
-             Precipitation: 0%
-         </li>
-         <li>
-            Humidity: 0%
+            Humidity: <span id="humidity"> </span>%
         </li>
         <li>
-            Wind: 2km/h
+            Wind: <span id="wind"> </span> km/h
         </li>
         </ul>            
         </div>
