--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <div class="row">
         <div class="col-6">   
          <div class="weather-temperature">     
-             <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="clear"/>
+             <img src="" 
+             alt="clear"
+             id = "icon" />
             <strong id="temperature"> </strong>
             <span class="units">
              °C | <a href="#"> °F </a>
