--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
              id = "icon" />
             <strong id="temperature"> </strong>
             <span class="units">
-             °C | <a href="#"> °F </a>
+                <a href="#" id="celsius-link" class="active"> °C </a>
+              | <a href="#" id="fahrenheit-link"> °F </a>
             </span>  
          </div>      
         </div> 
