--- a/index.html
+++ b/index.html
@@ -59,25 +59,9 @@
         </ul>            
         </div>
 
-        <div class="weather-forecast"> 
-        <div class="row">
-        <div class="col-2">
-        <div class="weather-forecast-date">
-        Thu
-        </div>
-        <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-        alt ="icon" width="42"/>
-        <div class="weather-forecast-temperature">
-        <span class="weather-forecast-temperature-max">
-        18°
-        </span>
-        <span class="weather-forecast-temperature-min">
-        12°
-        </span>
-        </div>
-        </div>
-        </div>
-        </div>
+        <div class="weather-forecast" id="forecast"> 
+     </div>
+    </div>  
 
     </div>
     </div>
