--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     </div>
 
-    <small>
+    <small class="coder">
         <a href="https://github.com/LauCarrillo21/vanilla-weather-app" target="_blank">Open-source code</a> by Laura Carrillo
      </small>
     </div>
