--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style.css">
-    <title> Weather App </title>
+    <title> ☀ Weather App </title>
 </head>
 <body>
     <div class="container">
@@ -19,7 +23,7 @@
             <input type = "search" placeholder ="Type a city..." class="form-control" id="city-input"/>
             </div>
             <div class = "col-3">
-            <input type = "submit" value="Search" class="btn btn-primary w-100" />
+            <input type = "submit" value="Search" class="btn btn-primary w-100" id="search" />
             </div>
             </div>
         </form>
@@ -66,10 +70,14 @@
     </div>
     </div>
 
+    <div class="hello">
     <small class="coder">
         <a href="https://github.com/LauCarrillo21/vanilla-weather-app" target="_blank">Open-source code</a> by Laura Carrillo
      </small>
+     </div>
+
     </div>
+
     </div>
 
     <script src="src/app.js"> </script>
